objects/ssot__PersonalizationLog__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AgmtStgElpsMilliseconds__c</fullName>
        <label>Augmenting Stage Elapsed Milliseconds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContentIndexNumber__c</fullName>
        <label>Content Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContentItemsQuantity__c</fullName>
        <label>Content Items Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContentLengthBytesNumber__c</fullName>
        <label>Content Length Bytes</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContentObjectAPIName__c</fullName>
        <label>Content Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentObjectLabelText__c</fullName>
        <label>Content Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentObjectRecordId__c</fullName>
        <label>Content Object Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentText__c</fullName>
        <label>Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContextAnchorApiName__c</fullName>
        <label>Context Anchor API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContextAnchorRecordId__c</fullName>
        <label>Context Anchor Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContextOnly__c</fullName>
        <label>Context Only</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CorrelationId__c</fullName>
        <label>Correlation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Personalization Log Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PerslStgElpsMilliseconds__c</fullName>
        <label>Personalizing Stage Elapsed Milliseconds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PersnlRequestChannelContextDescription__c</fullName>
        <label>Personalization Request Channel Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersnlRequestChannel__c</fullName>
        <label>Personalization Request Channel</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationContentId__c</fullName>
        <label>Personalization Content Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationDecisionId__c</fullName>
        <label>Personalization Decision</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationId__c</fullName>
        <label>Personalization</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationPointBindingId__c</fullName>
        <label>Personalization Point Binding</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationPointId__c</fullName>
        <label>Personalization Point</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationRequestId__c</fullName>
        <label>Personalization Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationStatus__c</fullName>
        <label>Personalization Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationType__c</fullName>
        <label>Personalization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizerId__c</fullName>
        <label>Personalizer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QualStageElpsMilliseconds__c</fullName>
        <label>Qualifying Stage Elapsed Milliseconds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientMessageId__c</fullName>
        <label>Recipient Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestDateTime__c</fullName>
        <label>Request DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseTimeMillisecond__c</fullName>
        <label>Response Time Millisecond</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RootPersonalizationPointId__c</fullName>
        <label>Root Personalization Point</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusCode__c</fullName>
        <label>Status Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetObjectAPIName__c</fullName>
        <label>Target Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetObjectLabelText__c</fullName>
        <label>Target Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetObjectRecordId__c</fullName>
        <label>Target Object Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009344285_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationLog_IndividualId_map__rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PersonalizationLog_IndividualId_map__rel</relationshipLabel>
        <relationshipName>rel_1702009344285_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009344903_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationLog_PersonalizationPo_rel</label>
        <referenceTo>ssot__PersonalizationPoint__dlm</referenceTo>
        <relationshipLabel>PersonalizationLog_PersonalizationPo_rel</relationshipLabel>
        <relationshipName>rel_1702009344903_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009345226_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationLog_PersonalizerId_ma_rel</label>
        <referenceTo>ssot__Personalizer__dlm</referenceTo>
        <relationshipLabel>PersonalizationLog_PersonalizerId_ma_rel</relationshipLabel>
        <relationshipName>rel_1702009345226_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>